fixed overlapping elements, finished

--- a/Treemap Diagram/src/main.scss
+++ b/Treemap Diagram/src/main.scss
@@ -23,7 +23,8 @@ body {
 
 #title {
     font-size: 30px;
-    text-anchor: middle
+    text-anchor: middle;
+    font-weight: bold;
 }
 
 #description {
